# careerpath

./: .env.local.example  .gitignore  BEFORE_AFTER.md  DATABASE_QUICKSTART.md  DEBUG_API_CONNECTION.md  DEPLOYMENT.md  DEPLOY_WITH_DATABASE.md  FIX_COMPLETE.md  FLOWCHART.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  NEXT_STEPS.md  PREDICTION_FIX.md  PRESENTATION_GUIDE.md  PROJECT_REPORT.md  PROJECT_STRUCTURE.md  PYTHONANYWHERE_SETUP.md  QUICKSTART.md  QUICK_START.md  README.md  README_COMPLETE.md  README_UPDATED.md  RESUME_DATABASE_FIX.md  RESUME_DATABASE_SETUP.md  RUN_LOCAL.md  START.ps1  START_HERE.md  SUMMARY.md  SYSTEM_ARCHITECTURE.md  VERCEL_BACKEND_SETUP.md  deploy_backend.ps1  deploy_backend.sh  netlify.toml  restart-frontend.ps1  start-local.ps1  start-local.sh  start.bat  start.sh  test_resume.txt  vercel.json
.github/workflows/: deploy.yml
backend/: README.md  career_path.db-journal  careerpath_new.db-shm  careerpath_new.db-wal  check_api_connection.py  check_prediction.py  list_all_resumes.py  main.py  models.py  pyproject.toml  queries.sql  requirements.txt  test_database.py  test_direct_db.py  test_flask_db.py  test_new_db.py  test_pure_sqlite.py  test_real_upload.py  test_upload.py  vercel.json  view_db.py  view_resumes.py  view_resumes_new.py
backend/api/: index.py  requirements.txt
dataset/: job_dataset_encoded.csv  job_dataset_text.csv  sample_resume.txt
dataset/script/: generate_dataset.py
frontend/: .env.production  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  (+1 more)
(+20 files in other folders)
